Check define name duplicate, Remove structure part
Check names when parse definition.
Between parts can not be same type, or has same fields,
that means very useless, so discard this feature.